Closed Bug 1741900 Opened 3 years ago Closed 2 years ago

First window titlebar is not dark anymore

Categories

(Core :: Widget: Win32, defect)

defect

Tracking

()

VERIFIED FIXED
96 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox94 --- unaffected
firefox95 --- wontfix
firefox96 --- verified

People

(Reporter: emilio, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

Bug 1734359 has regressed for the first window by bug 1736141, because LookAndFeel hasn't initialized sChromeColorScheme by the time it's queried.

Set release status flags based on info from the regressing bug 1736141

See Also: → 1742237

Emilio, are you landing this bug?

Flags: needinfo?(emilio)

The previous patch would be a better fix, but it causes some xpcshell
crashes on Linux which I haven't figured out yet (because initializing
LookAndFeel initializes gfxPlatform).

This should be less risky and still fix the bug.

See above

Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9e828ea8e494
Ensure color-scheme is initialized in a couple callers which might not have initialized LookAndFeel yet. r=mhowell
Attachment #9251378 - Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

Comment on attachment 9252286 [details]
Bug 1741900 - Ensure color-scheme is initialized in a couple callers which might not have initialized LookAndFeel yet. r=mstange,mhowell

Beta/Release Uplift Approval Request

  • User impact if declined: Minor cosmetic issue, but very simple fix in the end.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: comment 0
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Very trivial fix to avoid computing color-scheme too late.
  • String changes made/needed: none
Flags: needinfo?(emilio)
Attachment #9252286 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9252286 [details]
Bug 1741900 - Ensure color-scheme is initialized in a couple callers which might not have initialized LookAndFeel yet. r=mstange,mhowell

We have no beta left and already merged mozila-beta to mozilla-release, I think this ship with 96.

Attachment #9252286 - Flags: approval-mozilla-beta? → approval-mozilla-beta-
QA Whiteboard: [qa-triaged]
QA Whiteboard: [qa-triaged]

I have reproduced this issue using Firefox 96.0a1 (2021.11.19) on Win 10 x64.
I can confirm this issue is fixed, I verified using Firefox 96.0a1 (latest nightly from 2021.12.06) on Win 10 x64, macOS 10.15 and Ubuntu 20.04 x64.

Verified on 96.0b1 on Ubuntu 20.04 and on macOS 10.15 the issue is fixed, but on Windows 10 x64 the first window title bar dark theme was applied only after a Firefox restart. On latest nightly 97.0a1 the problem is the same, only after a Firefox restart the dark title bar was applied. Changing the theme to a light theme the title bar remain dark, only after a restart was changed to light.

Flags: needinfo?(emilio)

Yeah, it seems windows is not great at reacting to dynamic changes to this setting , so not great, but also not much we can do about it I think.

Flags: needinfo?(emilio)

Based on the above comment, I will take out the qe-verify+ flag.

Flags: qe-verify+
Status: RESOLVED → VERIFIED
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: