widget/LookAndFeel.h
@@ -412,8 +412,12 @@ class LookAndFeel {
   enum class ChromeColorSchemeSetting { Light, Dark, System };
   static ChromeColorSchemeSetting ColorSchemeSettingForChrome();
 
-  static ColorScheme ColorSchemeForChrome() { return sChromeColorScheme; }
+  static ColorScheme ColorSchemeForChrome() {
+    MOZ_ASSERT(sColorSchemeInitialized);
+    return sChromeColorScheme;
+  }
   static ColorScheme PreferredColorSchemeForContent() {
+    MOZ_ASSERT(sColorSchemeInitialized);
     return sContentColorScheme;
   }
 
@@ -540,9 +544,19 @@ class LookAndFeel {
   static void SetData(widget::FullLookAndFeel&& aTables);
   static void NotifyChangedAllWindows(widget::ThemeChangeKind);
 
-  static void RecomputeColorSchemes();
+  static void EnsureColorSchemesInitialized() {
+    if (!sColorSchemeInitialized) {
+      RecomputeColorSchemes();
+    }
+    MOZ_ASSERT(sColorSchemeInitialized);
+  }
+
   static ColorScheme sChromeColorScheme;
   static ColorScheme sContentColorScheme;
+
+ protected:
+  static void RecomputeColorSchemes();
+  static bool sColorSchemeInitialized;
 };
 
 }  // namespace mozilla
